--- a/Config/ClashConfig.ini
+++ b/Config/ClashConfig.ini
@@ -13,14 +13,14 @@
 ;设置规则标志位
 
 ruleset=🖥️ GitHub,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/GitHub/GitHub.list
-ruleset=✈️ 优先科学,https://gist.githubusercontent.com/AmosInk/3089f88bee0b2febf3c691ce1c9817e1/raw
+ruleset=✈️ 优先科学,https://raw.githubusercontent.com/AmosInk/clash-rules/refs/heads/main/Ruleset/SelfProy.list
 ruleset=📢 谷歌FCM,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleFCM.list
 ruleset=📢 谷歌🇨🇳Play下载,[]DOMAIN-SUFFIX,*xn--ngstr-lra8j.com
 ruleset=📢 谷歌🇨🇳Play服务,[]DOMAIN-SUFFIX,services.googleapis.cn
 ruleset=📢 谷歌🇨🇳Play服务,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleCNProxyIP.list
 ruleset=📢 谷歌🇨🇳,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/GoogleCN.list
 ruleset=📢 谷歌,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/Google.list
-ruleset=🎯 全球直连,https://gist.githubusercontent.com/AmosInk/f4943f83174fa1e0499bee4d6f69b544/raw
+ruleset=🎯 全球直连,https://raw.githubusercontent.com/AmosInk/clash-rules/refs/heads/main/Ruleset/SelfDirect.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/LocalAreaNetwork.list
 ruleset=🎯 全球直连,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/UnBan.list
 ruleset=🛑 广告拦截,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/BanAD.list
@@ -28,7 +28,7 @@ ruleset=🍃 应用净化,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/mast
 ruleset=📹 油管视频,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/YouTube.list
 ruleset=🚢 Docker,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/Docker/Docker.list
 ruleset=📲 电报消息,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Telegram.list
-ruleset=💬 Ai平台,https://gist.githubusercontent.com/AmosInk/589b12d0f993a8ad84a383b6e4879943/raw/
+ruleset=💬 Ai平台,https://raw.githubusercontent.com/AmosInk/clash-rules/refs/heads/main/Ruleset/AI.list
 ruleset=💬 Ai平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/AI.list
 ruleset=💬 Ai平台,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/Ruleset/OpenAi.list
 ruleset=📺 TikTok,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Clash/TikTok/TikTok.list
